k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-app
  template:
    metadata:
      labels:
        app: music-app
    spec:
      containers:
      - name: app
        image: iamruparc/music-recommendation:latest
        ports:
        - containerPort: 5000
