k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-recommendation-service
  namespace: music-app
spec:
  selector:
    app: music-recommendation
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
