k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-app-service
spec:
  selector:
    app: music-app
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
